stylesheets/default.scss
@import 'normalize';
@import 'dashicons';

$primary-color: #506775 !default;
$text-color: #444444;
$link-color: saturate(lighten($primary-color, 7), 40) !default;
$link-hover-color: darken($link-color, 20) !default;
$link-active-color: saturate($link-color, 10) !default;

$nav-border: 1px solid rgba(255, 255, 255, 0.1);


body {
  background: #F6F6F6;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
}

#content {
  opacity: 0.96;

  @media (min-width: 900px) and (max-width: 1199px) {
    display: block;
    width: 900px;
    margin: 0 auto;
  }

  @media (min-width: 1200px) {
    display: flex;
    min-height: 100vh;
    justify-content: center;
  }
}

#sidebar {
  background: $primary-color;

  @media (min-width: 1200px) {
    flex: 0 0 300px;
  }

  h1 {
    display: block;
    text-align: center;
    margin: 0;

    padding: 30px 0;

    img {
      width: 200px;
    }

    @media (min-width: 900px) and (max-width: 1200px) {
      padding: 20px 0;

      img {
        width: 150px;
      }
    }

    @media (max-width: 899px) {
      padding: 10px 0;

      img {
        width: 100px;
      }
    }
  }

  nav {
    margin-bottom: 46px;

    ul {
      margin: 0;
      padding: 0;
      list-style: none;

      li {
        display: block;
        border-bottom: $nav-border;

        &:first-child {
          border-top: $nav-border;

          @media (max-width: 1199px) {
            border-top: none;
          }
        }

        a {
          line-height: 40px;
          padding: 10px 25px;
          font-size: 12px;
          text-transform: uppercase;
          text-decoration: none;

          color: white;

          &:hover, &:focus, &.current {
            color: rgba(255, 255, 255, 0.5);
          }

          .dashicons {
            line-height: 40px;
            font-size: 1.2em;
            margin-top: -0.05em;
            margin-right: 0.25em;

            /* remove highlighting in mobile browsers when tapping on the link */
            -webkit-tap-highlight-color: transparent !important;
          }

          &:active {
            .dashicons {
              background: transparent;
            }
          }
        }
      }

      @media (max-width: 1199px) {
        display: none;
      }

      @media (min-width: 1200px) {
        display: block !important;
      }
    }

    .toggle {
      text-align: right;
      margin-top: -50px;
      border-bottom: $nav-border;

      @media (min-width: 1200px) {
        display: none;
      }

      button {
        color: white;
        outline: none;
        background: transparent;
        box-shadow: none;
        width: 60px;
        height: 50px;
        font-size: 24px;
        line-height: 1;
        cursor: pointer;
        border: none;

        .dashicons {
          font-size: 24px;
        }
      }
    }
  }

  .tweets {
    margin: 0 auto;
    width: 250px;

    a.twitter-timeline {
      display: none;
    }
  }
}

main {
  background: white;
  color: $text-color;
  line-height: 1.575;
  border-top: 1px solid #F9F9F9;

  @media (min-width: 1200px) {
    flex: 0 0 900px;
  }

  #page {
    padding: 60px 90px 80px 90px;

    @media (min-width: 900px) and (max-width: 1199px) {
      padding: 50px 60px 65px 60px;
    }

    @media (max-width: 899px) {
      padding: 35px 30px 45px 30px;
    }

    h1 {
      font-family: 'Lato', 'Trebuchet MS', sans-serif;
      font-size: 36px;
      font-weight: bold;
      text-align: center;
      margin-top: 6px;  /* only a little bit of top margin because this element is usually the very first */
      margin-bottom: 32px;
      line-height: 1.2;

      @media (max-width: 1199px) {
        font-size: 32px;
        margin-bottom: 28px;
      }

      @media (max-width: 899px) {
        font-size: 26px;
        margin-bottom: 20px;
      }
    }

    h2, h3 {
      font-family: 'Lato', 'Trebuchet MS', sans-serif;
      font-weight: normal;
      margin-top: 26px;
      margin-bottom: 13px;
      line-height: 1.2;
    }

    h2 {
      font-size: 30px;

      @media (max-width: 1199px) {
        font-size: 26px;
        margin-top: 24px;
      }

      @media (max-width: 899px) {
        font-size: 22px;
        margin-top: 22px;
      }

      .sponsors {
        @mixin sponsorship-level($color) {
          border-bottom: 3px solid $color;
        }

        &.platinum {
          @include sponsorship-level(#E5E4E2);
        }
        &.gold {
          @include sponsorship-level(#D4AF37);
        }
        &.silver {
          @include sponsorship-level(#C0C0C0);
        }
        &.bronze {
          @include sponsorship-level(#CD7F32);
        }
      }
    }

    h3 {
      font-size: 24px;

      @media (max-width: 1199px) {
        font-size: 22px;
        margin-top: 22px;
      }

      @media (max-width: 899px) {
        font-size: 20px;
        margin-top: 20px;
      }

      .sponsors {
        &.amount {
          font-size: 82.5%;
          position: relative;
          top: -5px;
        }
      }
    }

    h4, h5 {
      font-family: 'Roboto Slab', 'Roboto', Helvetica, Arial, sans-serif;
      font-weight: normal;
      margin-top: 13px;
      margin-bottom: 13px;
      line-height: 1.2;
    }

    h4 {
      font-size: 18px;

      @media (max-width: 1199px) {
        font-size: 17px;
      }

      @media (max-width: 899px) {
        font-size: 16px;
      }
    }

    h5 {
      font-size: 16px;

      @media (max-width: 1199px) {
        font-size: 15px;
      }
    }

    h6 {
      font-family: 'Roboto', Helvetica, Arial, sans-serif;
      font-size: 15px;
      font-weight: bold;
      margin-top: 13px;
      margin-bottom: 13px;
      line-height: 1.15;

      @media (max-width: 899px) {
        font-size: 14px;
      }
    }

    h1, h2, h3, h4, h5, h6 {
      &:first-child, &.topmost {
        margin-top: 0; /* top most heading should not have any top margin since there is usually nothing above */
      }
    }

    p {
      margin: 0 0 13px 0;

      .extra-spacing {
        margin-bottom: 26px;
      }
    }

    ul, ol {
      margin-top: 0;
      margin-bottom: 13px;
    }

    hr {
      margin-top: 26px;
      margin-bottom: 26px;
      border: 0;
      border-top: 1px solid #EEEEEE;
    }

    a {
      color: $link-color;
      text-decoration: none;

      &:hover, &:focus {
        color: $link-hover-color;
      }

      &:active {
        color: $link-active-color;
      }
    }

    a.button {
      $button-base-color: $primary-color !default;
      $button-color-top: lighten(saturate(adjust-hue($button-base-color, -1), 19.5), 14.35);
      $button-color-top-hover: lighten(saturate($button-color-top, 3.75), 2.35);
      $button-color-bottom: $button-base-color;
      $button-color-bottom-hover: $button-color-bottom;

      /* Fallback colors for browsers that don't support gradients */
      $button-color: lighten(saturate(adjust-hue($button-color-bottom, -1), 8.5), 10.75);
      $button-color-hover: $button-color-top-hover;

      color: white;
      background: $button-color;
      background-image: linear-gradient(to bottom, $button-color-top, $button-color-bottom);
      border-radius: 12px;
      font-family: 'Lato', 'Trebuchet MS', sans-serif;
      font-style: normal;
      font-size: 16px;
      padding: 9px 20px 11px 20px;
      text-decoration: none;
      border-width: 0;
      line-height: 2.5;
      white-space: nowrap;

      &:hover, &:active, &:focus {
        background: $button-color-hover;
        background-image: linear-gradient(to bottom, $button-color-top-hover, $button-color-bottom-hover);
        color: white;
        text-decoration: none;
      }
    }

    .centered {
       text-align: center;
     }
  }
}

